# konq-plugins

./: Makefile  README.md
src/: CMakeLists.txt  README
src/adblock/: Messages.sh  adblock.cpp  adblock.h  adblockdialog.cpp  plugin_adblock.desktop
src/akregator/: CMakeLists.txt  Messages.sh  akregator_konqfeedicon.desktop  akregator_konqplugin.desktop  feeddetector.cpp  konqfeedicon.cpp  konqfeedicon.h  pluginbase.cpp
src/autorefresh/: CMakeLists.txt  Messages.sh  autorefresh.cpp  autorefresh.desktop
src/babelfish/: CMakeLists.txt  Messages.sh  config-babelfish.h.cmake  plugin_babelfish.cpp  plugin_babelfish.desktop  plugin_babelfish.h
src/crashes/: CMakeLists.txt  Messages.sh  crashesplugin.cpp  crashesplugin.desktop  crashesplugin.h  crashesplugin.rc
src/dirfilter/: Messages.sh  dirfilterplugin.cpp  dirfilterplugin.desktop  dirfilterplugin.h  dirfilterplugin.rc
src/doc/: CMakeLists.txt  index.docbook
src/doc-translations/: CMakeLists.txt
src/doc/crashes/: CMakeLists.txt
src/domtreeviewer/: CMakeLists.txt  Messages.sh  domtreecommands.cpp  domtreecommands.h  domtreeview.cpp  domtreeview.h  domtreewindow.cpp  domtreewindow.h  plugin_domtreeviewer.desktop
src/fsview/: CMakeLists.txt  Messages.sh  fsview.desktop  fsview_part.desktop  fsview_part.rc
src/fsview/tests/: CMakeLists.txt
src/imagerotation/: imageconverter.desktop  jpegorient.desktop
src/khtmlsettingsplugin/: Messages.sh  khtmlsettingsplugin.desktop
src/kimgalleryplugin/: CMakeLists.txt  Messages.sh  imgallerydialog.cpp  imgalleryplugin.cpp  kimgalleryplugin.desktop  kimgalleryplugin.rc
src/mediarealfolder/: CMakeLists.txt  media_realfolder.desktop
src/microformat/: Messages.sh  konqmficon.cpp  mf_konqmficon.desktop
src/minitools/: Messages.sh  minitoolsplugin.desktop  minitoolsplugin.rc
src/po/: CMakeLists.txt
src/po/af/: babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/ar/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  mf_konqplugin.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/be/: akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  mf_konqplugin.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/bg/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  mf_konqplugin.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/bn/: babelfish.po  konqsidebar_metabar.po  minitoolsplugin.po  webarchiver.po
src/po/br/: autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/ca/: akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  mf_konqplugin.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/cs/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  mf_konqplugin.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/cy/: autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/da/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  mf_konqplugin.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/de/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  khtmlsettingsplugin.po  konqsidebar_mediaplayer.po  konqsidebar_metabar.po  mf_konqplugin.po  minitoolsplugin.po  rellinks.po  searchbarplugin.po  uachangerplugin.po  validatorsplugin.po  webarchiver.po
src/po/el/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  crashesplugin.po  dirfilterplugin.po  domtreeviewer.po  (+12 more)
src/rellinks/: Messages.sh  plugin_rellinks.cpp  plugin_rellinks.desktop
src/searchbar/: CMakeLists.txt  Messages.sh  OpenSearchManager.cpp  searchbar.cpp  searchbar.desktop  searchbar.h  searchbar.rc
src/sidebar/: CMakeLists.txt
src/uachanger/: CMakeLists.txt  Messages.sh  uachangerplugin.cpp  uachangerplugin.desktop  uachangerplugin.h  uachangerplugin.rc
src/validators/: CMakeLists.txt  Messages.sh  plugin_validators.cpp  plugin_validators.desktop
src/webarchiver/: Messages.sh  archivedialog.cpp  plugin_webarchiver.cpp  plugin_webarchiver.desktop  webarchivecreator.cpp  webarchivecreator.h  webarchivethumbnail.desktop
(+1135 files in other folders)
