add_subdirectory( ca_konq-plugins/konq-plugins )
add_subdirectory( de_konq-plugins/konq-plugins )
add_subdirectory( et_konq-plugins/konq-plugins )
add_subdirectory( fr_konq-plugins/konq-plugins )
add_subdirectory( it_konq-plugins/konq-plugins )
add_subdirectory( nl_konq-plugins/konq-plugins )
add_subdirectory( pt_konq-plugins/konq-plugins )
add_subdirectory( pt_BR_konq-plugins/konq-plugins )
add_subdirectory( sv_konq-plugins/konq-plugins )
add_subdirectory( uk_konq-plugins/konq-plugins )
